--- a/ultimatum/Player1Decision.html
+++ b/ultimatum/Player1Decision.html
@@ -5,6 +5,7 @@
     <p>You have been endowed with {{ endowment }} Ksh. Send any amount to Player 2:</p>
     <form method="post">
         {{ form.amount_sent }}
+        {{ formfield_errors 'amount_sent' }}
         <button type="submit">Submit</button>
     </form>
 
