Refactor Mini-Ultimatum Game for version 2
- Replaced form-based input with label-based input for simplicity.
- Updated templates for improved player experience.
- Removed WaitForPunisher.html.
- Renamed FinalResults.html to TheEnd.html for clarity.
- Customized Results.html for each player with if statements.

--- a/ultimatum/ExitSurvey.html
+++ b/ultimatum/ExitSurvey.html
@@ -2,12 +2,7 @@
    Exit Survey
 {{ endblock }}
 {{ block content }}
-    
-    <form method="post">
-        {{ form.capital_city.label }} {{ form.capital_city }}
-        {{ form.math_answer.label }} {{ form.math_answer }}
-        {{ form.population.label }} {{ form.population }}
-        <button type="submit">Submit</button>
-    </form>
+    {{ formfields }}
+    {{ next_button }}
 
 {{ endblock }}
