--- a/ultimatum/PunisherDecision.html
+++ b/ultimatum/PunisherDecision.html
@@ -3,10 +3,8 @@
 {{ endblock }}
 {{ block content }}
     <h2>Punisher Decision</h2>
-    <p>Player 1 has sent {{ amount_sent }} Ksh to Player 2. Decide whether to punish or not:</p>
-    <form method="post">
-        {{ form.punish }}
-        <button type="submit">Submit</button>
-    </form>
+    <p>Player 1 has sent {{ amount_sent }} to Player 2:</p>
+    {{ formfields }}
+    {{ next_button }}
 
 {{ endblock }}
